# Firedecor

./: README.md  meson.build
metadata/: cosmodecor.xml  meson.build
src/: cairo-util.hpp  cosmodecor-buttons.cpp  cosmodecor-buttons.hpp  cosmodecor-layout.cpp  cosmodecor-layout.hpp  cosmodecor-subsurface.cpp  cosmodecor-subsurface.hpp  cosmodecor-theme.cpp  cosmodecor-theme.hpp  cosmodecor.cpp  firedecor-buttons.cpp  firedecor-buttons.hpp  firedecor-layout.cpp  firedecor-layout.hpp  firedecor-subsurface.cpp  firedecor-subsurface.hpp  firedecor-theme.cpp  firedecor-theme.hpp  firedecor.cpp  meson.build
